fixed x overflow:

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,16 +7,15 @@
 }
 
 html, body {
-  /*width: 100%;
-  height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;*/
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
   font-family: 'Lato', sans-serif;
-  /*box-sizing: border-box;*/
+
 }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -59,6 +58,13 @@ a:hover {
 
 .text-white {
   color: #ffffff;
+}
+
+nav {
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 .navbar {
@@ -185,15 +191,15 @@ a:hover {
 }
 
 .card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 15px;
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  padding: 15px;
 }
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .footer {
